--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,8 +88,25 @@ jobs:
 
 
 
+  iOS:
+    runs-on: macos-latest
+    steps:
+
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: ${{ env.JAVA_VERSION }}
+
+      - uses: gradle/gradle-build-action@v2
+        with:
+          arguments: ciIos --stacktrace
+
+
+
   Automation:
-    needs: Android
+    needs: [ Android, iOS ]
     runs-on: macos-latest
     steps:
 
