--- a/Multiplatform-App/gradle/libs.versions.toml
+++ b/Multiplatform-App/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
 
-kotlin = "1.9.23"
-compose = "1.6.1"
-agp = "8.3.1"
-androidx-activityCompose = "1.8.2"
-androidx-uiTest = "1.6.4"
+kotlin = "2.0.0"
+compose = "1.6.10"
+agp = "8.2.2"
+androidx-activityCompose = "1.9.0"
+androidx-uiTest = "1.6.7"
 
 [libraries]
 
@@ -15,5 +15,6 @@ androidx-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref =
 [plugins]
 
 multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 compose = { id = "org.jetbrains.compose", version.ref = "compose" }
 android-application = { id = "com.android.application", version.ref = "agp" }
