--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,9 @@ jobs:
           distribution: 'temurin'
           java-version: ${{ env.JAVA_VERSION }}
 
-      - uses: gradle/gradle-build-action@v3
-        with:
-          arguments: ciLint --stacktrace
+      - uses: gradle/actions/setup-gradle@v4
+
+      - run: ./gradlew ciLint --stacktrace
 
 
 
@@ -44,9 +44,9 @@ jobs:
           distribution: 'temurin'
           java-version: ${{ env.JAVA_VERSION }}
 
-      - uses: gradle/gradle-build-action@v3
-        with:
-          arguments: ciUnitTest --stacktrace
+      - uses: gradle/actions/setup-gradle@v4
+
+      - run: ./gradlew ciUnitTest --stacktrace
 
 
 
@@ -67,13 +67,11 @@ jobs:
           distribution: 'temurin'
           java-version: ${{ env.JAVA_VERSION }}
 
-      - uses: gradle/gradle-build-action@v3
-        with:
-          arguments: ciAndroid --stacktrace
+      - uses: gradle/actions/setup-gradle@v4
 
-      - uses: gradle/gradle-build-action@v3
-        with:
-          arguments: ciAndroidInstrumentalTest --stacktrace
+      - run: ./gradlew ciAndroid --stacktrace
+
+      - run: ./gradlew ciAndroidInstrumentalTest --stacktrace
 
 
 
@@ -92,9 +90,9 @@ jobs:
           distribution: 'temurin'
           java-version: ${{ env.JAVA_VERSION }}
 
-      - uses: gradle/gradle-build-action@v3
-        with:
-          arguments: ciDesktop --stacktrace
+      - uses: gradle/actions/setup-gradle@v4
+
+      - run: ./gradlew ciDesktop --stacktrace
 
 
 
@@ -113,9 +111,9 @@ jobs:
           distribution: 'temurin'
           java-version: ${{ env.JAVA_VERSION }}
 
-      - uses: gradle/gradle-build-action@v3
-        with:
-          arguments: ciBrowser --stacktrace
+      - uses: gradle/actions/setup-gradle@v4
+
+      - run: ./gradlew ciBrowser --stacktrace
 
 
 
@@ -130,9 +128,9 @@ jobs:
           distribution: 'temurin'
           java-version: ${{ env.JAVA_VERSION }}
 
-      - uses: gradle/gradle-build-action@v3
-        with:
-          arguments: ciIos --stacktrace
+      - uses: gradle/actions/setup-gradle@v4
+
+      - run: ./gradlew ciIos --stacktrace
 
 
 
@@ -167,6 +165,6 @@ jobs:
 
       - uses: Homebrew/actions/setup-homebrew@master
 
-      - uses: gradle/gradle-build-action@v3
-        with:
-          arguments: ciAutomationTest --stacktrace
+      - uses: gradle/actions/setup-gradle@v4
+
+      - run: ./gradlew ciAutomationTest --stacktrace
