--- a/Multiplatform-App/gradle/libs.versions.toml
+++ b/Multiplatform-App/gradle/libs.versions.toml
@@ -1,16 +1,16 @@
 [versions]
 
-kotlin = "2.0.0"
-compose = "1.6.10"
-agp = "8.2.2"
-androidx-activityCompose = "1.9.0"
-androidx-uiTest = "1.6.7"
+kotlin = "2.0.20-RC"
+compose = "1.7.0-alpha02"
+agp = "8.5.2"
+androidx-activityCompose = "1.9.1"
+androidx-uiTest = "1.6.8"
 
 [libraries]
 
 androidx-activityCompose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
-androidx-testManifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "androidx-uiTest" }
-androidx-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "androidx-uiTest" }
+androidx-uitest-testManifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "androidx-uiTest" }
+androidx-uitest-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "androidx-uiTest" }
 
 [plugins]
 
