--- a/Multiplatform-App/gradle/libs.versions.toml
+++ b/Multiplatform-App/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
 
 kotlin = "2.0.20"
-compose = "1.7.0-beta02"
+compose = "1.7.0"
 agp = "8.6.1"
-androidx-activityCompose = "1.9.2"
-androidx-uiTest = "1.7.2"
+androidx-activityCompose = "1.9.3"
+androidx-uiTest = "1.7.4"
 
 [libraries]
 
