Update Gradle Wrapper
Added a step to update the Gradle wrapper using the `gradle-update/update-gradle-wrapper-action@v2` action. This will ensure the project is using the latest version of Gradle.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,9 @@ jobs:
 
       - run: ./gradlew ciLint --stacktrace
 
+      - name: Update Gradle Wrapper
+        uses: gradle-update/update-gradle-wrapper-action@v2
+
 
 
   UnitTest:
