--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,12 @@
 name: ci
 
-on: [ push ]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 env:
   JAVA_VERSION: 21
@@ -29,7 +35,9 @@ jobs:
 
       - name: Update Gradle Wrapper
         uses: gradle-update/update-gradle-wrapper-action@v2
-
+        with:
+          paths-ignore: Multiplatform-App/**
+          merge-method: SQUASH
 
 
   UnitTest:
