Run ktlintFormat, update Gradle wrapper and auto commit
Updated the CI workflow to:
- Run `ktlintFormat` before linting.
- Update the Gradle wrapper to the latest version.
- Auto-commit any changes made by the workflow.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,12 +14,11 @@ env:
 jobs:
 
 
+
   Lint:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ ubuntu-latest, macos-latest ]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
 
       - uses: actions/checkout@v4
@@ -31,13 +30,12 @@ jobs:
 
       - uses: gradle/actions/setup-gradle@v4
 
-      - run: ./gradlew ciLint --stacktrace
+      - run: ./gradlew ktlintFormat ciLint --stacktrace
 
-      - name: Update Gradle Wrapper
-        uses: gradle-update/update-gradle-wrapper-action@v2
-        with:
-          paths-ignore: Multiplatform-App/**
-          merge-method: SQUASH
+      - run: ./gradlew wrapper --gradle-version latest --stacktrace
+
+      - uses: stefanzweifel/git-auto-commit-action@v5
+
 
 
   UnitTest:
