--- a/Multiplatform-App/gradle/libs.versions.toml
+++ b/Multiplatform-App/gradle/libs.versions.toml
@@ -1,10 +1,11 @@
 [versions]
 
-kotlin = "2.1.0"
-compose = "1.7.3"
+kotlin = "2.1.20"
+compose = "1.8.0-beta01"
 agp = "8.6.1"
-androidx-activityCompose = "1.9.3"
-androidx-uiTest = "1.7.4"
+androidx-activityCompose = "1.10.1"
+androidx-uiTest = "1.7.8"
+hotReload = "1.0.0-alpha03"
 
 [libraries]
 
@@ -18,3 +19,4 @@ multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotl
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 compose = { id = "org.jetbrains.compose", version.ref = "compose" }
 android-application = { id = "com.android.application", version.ref = "agp" }
+hotReload = { id = "org.jetbrains.compose.hot-reload", version.ref = "hotReload" }
