--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,24 +143,18 @@ jobs:
 
   Automation:
     needs: [ Android ]
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ ubuntu-latest ]
+    runs-on: ubuntu-latest
     steps:
 
       - uses: actions/checkout@v4
 
       - name: Enable KVM group perms
-        if: contains(matrix.os, 'ubuntu')
         run: |
           echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
           sudo udevadm control --reload-rules
           sudo udevadm trigger --name-match=kvm
 
       - name: Install libpulse
-        if: contains(matrix.os, 'ubuntu')
         run: |
           sudo apt update
           sudo apt install libpulse-dev
