--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,6 @@ env:
 jobs:
 
 
-
   Lint:
     runs-on: ubuntu-latest
     permissions:
@@ -38,15 +37,35 @@ jobs:
 
 
 
-  UnitTest:
+  MP_Tests:
     runs-on: ${{ matrix.os }}
+    continue-on-error: ${{ matrix.experimental }}
     strategy:
       fail-fast: false
       matrix:
-        os: [ macos-latest ]
+        gradle-tasks: [
+          "jvmTest",
+          "wasmJsBrowserTest"
+        ]
+        os: [ ubuntu-latest ]
+        experimental: [ false ]
+        include:
+          - gradle-tasks: "jsBrowserTest"
+            os: ubuntu-latest
+            experimental: true
+          - gradle-tasks: "iosSimulatorArm64Test"
+            os: macos-latest
+            experimental: false
     steps:
 
       - uses: actions/checkout@v4
+
+      - name: Enable KVM group perms
+        if: contains(matrix.os, 'ubuntu')
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
 
       - uses: actions/setup-java@v4
         with:
@@ -55,7 +74,9 @@ jobs:
 
       - uses: gradle/actions/setup-gradle@v4
 
-      - run: ./gradlew ciUnitTest --stacktrace
+      - run: |
+          cd Multiplatform-App
+          ./gradlew clean ${{ matrix.gradle-tasks }} --stacktrace
 
 
 
