--- a/Multiplatform-App/gradle/libs.versions.toml
+++ b/Multiplatform-App/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
 
 kotlin = "2.1.20"
-compose = "1.8.0-rc01"
-agp = "8.6.1"
+compose = "1.8.0"
+agp = "8.10.0"
 androidx-activityCompose = "1.10.1"
 androidx-uiTest = "1.7.8"
 hotReload = "1.0.0-alpha08"
