--- a/Multiplatform-App/gradle/libs.versions.toml
+++ b/Multiplatform-App/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
 
-kotlin = "2.2.20-RC"
-compose = "1.9.0-beta03"
+kotlin = "2.2.20"
+compose = "1.9.0"
 agp = "8.10.0"
 androidx-activityCompose = "1.10.1"
 androidx-uiTest = "1.8.1"
-hotReload = "1.0.0-beta05"
+hotReload = "1.0.0-beta07"
 
 [libraries]
 
