--- a/Multiplatform-App/gradle/libs.versions.toml
+++ b/Multiplatform-App/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
 
-kotlin = "2.2.20"
-compose-multiplatform = "1.9.0"
+kotlin = "2.2.21"
+compose-multiplatform = "1.9.2"
 agp = "8.12.3"
-androidx-activityCompose = "1.10.1"
-compose-hot-reload = "1.0.0-beta09"
+androidx-activityCompose = "1.11.0"
+compose-hot-reload = "1.0.0-rc02"
 
 [libraries]
 
